--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Test</title>
     <link rel="stylesheet" href="/test/css/index.css">
 </head>
+
 <body>
-    
+    <div class="title-bar">Testing GitHub</div>
     <script src="/test/js/jquery-3.7.1.min.js"></script>
     <script src="/test/js/index.js"></script>
 </body>
+
 </html>
