Implement Menu Bar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 
 <body>
     <div class="title-bar">Testing GitHub</div>
+    <div class="menu-bar">
+        <div class="menu-btn">
+            <div class="btn">Menu</div>
+            <div class="menu-list">
+                <div class="list">Home</div>
+                <div class="list">Product</div>
+                <div class="list">Contact</div>
+                <div class="list">About</div>
+            </div>
+        </div>
+    </div>
+    
     <script src="/test/js/jquery-3.7.1.min.js"></script>
     <script src="/test/js/index.js"></script>
 </body>
