--- a/index.html
+++ b/index.html
@@ -21,7 +21,38 @@
             </div>
         </div>
     </div>
-    
+    <!-- desciption box - start -->
+    <div class="description-box">
+        <div class="slide-outer-box">
+            <div class="slide-inner-box">
+                <div class="slide"><img src="/test/slide/one.jpg" alt=""></div>
+                <div class="slide"><img src="/test/slide/two.jpg" alt=""></div>
+                <div class="slide"><img src="/test/slide/three.jpg" alt=""></div>
+                <div class="slide"><img src="/test/slide/four.jpg" alt=""></div>
+            </div>
+        </div>
+        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque illo labore temporibus rem adipisci? Doloribus explicabo tenetur aspernatur sed quidem quas quam recusandae, iusto rem vitae? Consectetur accusamus maiores iure!
+        Nesciunt, sequi dolores, tenetur harum dolorem quas dolor maiores vel inventore aspernatur voluptatem labore. Eaque soluta vero, reprehenderit esse molestias dignissimos qui veniam tempora voluptatum assumenda cum expedita eveniet officia?
+        Quidem similique dolore eius fuga maxime amet ipsam repudiandae consequuntur explicabo ex nisi perspiciatis et asperiores magni consectetur, illo nostrum dignissimos quam quo corporis placeat deserunt. Mollitia reiciendis obcaecati repellendus.
+        Amet quasi, dicta id pariatur illum optio quia ex odio voluptatibus autem sapiente vero eos blanditiis ab repellendus distinctio facere debitis. Earum voluptatem animi quibusdam laudantium hic inventore dolore sint.
+        Doloribus, iure nostrum impedit rem ducimus distinctio voluptatibus facere sed laudantium eaque sapiente nulla architecto ipsam, officia explicabo accusantium reiciendis tempore doloremque, eligendi tenetur! Libero a tempore neque deserunt rerum?
+        Maiores, dolorem error vitae magni quam adipisci? Ipsa, repellendus temporibus aliquam accusamus nihil officiis voluptate accusantium aperiam dignissimos at architecto quia! Animi, et ab? Voluptates quos reprehenderit numquam maxime architecto!
+        Ut quidem vitae dolorem harum deleniti ratione consequuntur eligendi odit error et aperiam, necessitatibus velit modi nostrum qui cupiditate iure, a ex. Explicabo veritatis ad odit temporibus similique ex! Quisquam.
+        Dolorem in corrupti officiis culpa animi minus sapiente voluptatibus enim delectus expedita amet explicabo tenetur, non maxime autem magnam? Consectetur quo blanditiis repellat quibusdam voluptatem doloribus ratione nulla molestiae porro?
+        At sit nesciunt in enim aliquid sapiente quisquam distinctio labore velit quasi exercitationem, quo ab veniam dolorem explicabo amet nulla dolore non molestias inventore ipsa porro quidem optio? Iste, assumenda!
+        Non hic quo labore esse aut, libero molestias vitae dolor dolores sapiente repellat distinctio illum placeat dolore sit! Laudantium maxime explicabo nulla totam animi mollitia at incidunt, sint delectus natus!
+        Omnis aperiam veniam velit fugiat sint pariatur quia ipsa quis ducimus quam impedit culpa, asperiores, doloribus itaque! Explicabo perferendis sunt nostrum culpa facere possimus. Reiciendis dignissimos incidunt voluptas repellat. Dicta!
+        Provident magni blanditiis nobis sequi esse hic reprehenderit exercitationem explicabo quas. Minus itaque ut, eos magnam, commodi facere rerum tempora, doloremque deleniti nesciunt officia id! Dignissimos dicta perferendis vero fugit.
+        Ipsum modi dolores dolor sit placeat, animi incidunt non dolorem iure at maiores amet, rem totam officia dolorum illo minima molestias eum, architecto dolore exercitationem ad! Eaque ullam enim totam?
+        Fugit sit totam similique ratione quia, molestias sunt numquam ducimus nisi ipsum. Possimus modi ea voluptas rem molestias delectus animi doloremque omnis provident quis! Esse numquam perferendis accusamus quisquam minus.
+        Obcaecati voluptate iste maiores ratione tenetur temporibus quia enim nemo, libero blanditiis mollitia ipsam, ullam deleniti! Nam fugit officiis harum adipisci quia commodi quam asperiores! Deserunt consectetur accusamus atque necessitatibus.
+        Unde eius, quaerat placeat vel iusto eveniet dolorum repellendus aliquam libero quas rem maiores ut beatae recusandae ad aspernatur quisquam, voluptates laboriosam. Ipsum neque enim in, sequi illum distinctio labore?
+        Recusandae, itaque non? Alias voluptates ex illo labore corrupti omnis molestias ipsa iure. Inventore animi sed numquam dolore, distinctio illo minus adipisci provident voluptas mollitia, alias error dicta vero veritatis.
+        Omnis sed expedita error quos iusto distinctio tempore minus eaque aspernatur dolor quis ut molestiae eius totam odio sit eos molestias, accusantium officia doloribus quidem quae quas nihil beatae! Eligendi?
+        Commodi nobis voluptate mollitia impedit, soluta quo libero asperiores ex aliquid eligendi ab deleniti maxime id labore quisquam ipsum nam excepturi architecto voluptatem nostrum ea. Non natus ipsum aliquam rerum?
+        Dolorum laborum, quos qui, saepe mollitia alias perferendis iure error dolorem voluptatem distinctio a laudantium vel facere tenetur. Tempora, itaque explicabo quaerat iste recusandae numquam vero nulla in ducimus dolorem?</h1>
+    </div>
+    <!-- desciption box - end -->
     <script src="/test/js/jquery-3.7.1.min.js"></script>
     <script src="/test/js/index.js"></script>
 </body>
